push avant de tout casé

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 <body>
     <button>START</button>
     <main></main>
+    <div id="playerbar"></div>
+    <div id="enemybar"></div>
     <script type="text/javascript" src="rpg.js"></script>
 </body>
 
