adding all image and pokemon until Aéromite

--- a/index.html
+++ b/index.html
@@ -10,10 +10,15 @@
 </head>
 
 <body>
-    <button>START</button>
+    <button id="PVSP" class="combat">player vs player</button>
+    <button id="PVSIA" class="combat">player vs IA</button>
+    <button id="IAVSIA" class="combat">IA vs IA</button>
     <main></main>
-    <div id="playerbar"></div>
-    <div id="enemybar"></div>
+    <div id="bars">
+        <div id="enemybar"></div>
+        <div id="playerbar"></div>
+    </div>
+    <div id='textzone'></div>
     <script type="text/javascript" src="rpg.js"></script>
 </body>
 
