adding images and list button

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <button id="PVSP" class="combat">player vs player</button>
     <button id="PVSIA" class="combat">player vs IA</button>
     <button id="IAVSIA" class="combat">IA vs IA</button>
+    <button id="list_pkms" class="combat">POKEMON LIST</button>
     <main></main>
     <div id="bars">
         <div id="enemybar"></div>
